--- a/css/main.scss
+++ b/css/main.scss
@@ -32,7 +32,9 @@
 }
 
 
-
+* {
+  font-weight: normal !important;
+}
 
 
 
@@ -141,7 +143,8 @@ header.wrapper {
       background: transparent url('../img/dot-blue.png') left .6em no-repeat;
       padding: 0 0 0 1em;
       margin-bottom: 1em;
-      font-size: 19px;
+      font-size: 18px !important;
+      line-height: 22px;
       color: #383838;
       font-family: 'TeleGrotesk';
     }
@@ -331,6 +334,8 @@ hr {
 
     li {
       margin-bottom: .5em;
+      font-size: 18px !important;
+      line-height: 22px;
     }
   }
   
@@ -344,7 +349,7 @@ hr {
   border: 1px solid #fff;
 
   h3 {
-    font-size: 1.375em;
+    font-size: 24px;
     font-family: 'TeleGroteskFett';
     margin: 0;
   }
@@ -359,12 +364,13 @@ hr {
     margin-top: .7em;
     li {
       margin-bottom: .6em;
-      line-height: 1.5em;
+      font-size: 18px !important;
+      line-height: 22px;
     }
   }
   p {
-    font-size: 0.875em;
-    line-height: 1.45em;
+    font-size: 18px;
+    line-height: 22px;
   }
 }
 .dark {
@@ -391,6 +397,9 @@ hr {
   color: #383838;
 
 }
+
+
+
 
 .span3 {
   hr {
@@ -793,7 +802,7 @@ hr {
   }
   .subcontent section p {
     font-size: 1em;
-    color: #797979;
+    color: #383838;
   }
   section.span2 p {
     font-size: 1em;
@@ -1143,7 +1152,7 @@ article {
   }
   .subcontent section p {
     font-size: 1em;
-    color: #797979;
+    color: #383838;
   }
   section.span2 p {
     font-size: 1em;
@@ -1202,6 +1211,24 @@ article {
       margin-bottom: .8em;
     }
   }
+  .dark {
+    min-height: auto;
+  }
+  .dark + .fillerbox {
+    min-height: auto;
+  }
+  .medium {
+    min-height: auto;
+  }
+  .medium + .fillerbox {
+    min-height: auto;
+  }
+  .light {
+    min-height: auto;
+  }
+  .light + .fillerbox {
+    min-height: auto;
+  }
   .span3:last-of-type {
     margin-right:0 ;
   }
@@ -1219,6 +1246,7 @@ article {
   .fillerbox {
     display: none;
     padding: 6px 0 6px 16px;
+    margin-bottom: 30px;
   }
   .contact, .countryinfo, .copyright, .otherlinks {
     float: none;
@@ -1446,7 +1474,7 @@ article {
   }
   .subcontent section p {
     font-size: 1em;
-    color: #797979;
+    color: #383838;
   }
   section.span2 p {
     font-size: 1em;
@@ -1501,6 +1529,24 @@ article {
     ul li {
       margin-bottom: .8em;
     }
+  }
+  .dark {
+    min-height: auto;
+  }
+  .dark + .fillerbox {
+    min-height: auto;
+  }
+  .medium {
+    min-height: auto;
+  }
+  .medium + .fillerbox {
+    min-height: auto;
+  }
+  .light {
+    min-height: auto;
+  }
+  .light + .fillerbox {
+    min-height: auto;
   }
   .span3:last-of-type {
     margin-right:0 ;
@@ -1730,7 +1776,7 @@ article {
   }
   .subcontent section p {
     font-size: 1em;
-    color: #797979;
+    color: #383838;
   }
   section.span2 p {
     font-size: 1em;
@@ -1781,6 +1827,24 @@ article {
     ul li {
       margin-bottom: .8em;
     }
+  }
+  .dark {
+    min-height: auto;
+  }
+  .dark + .fillerbox {
+    min-height: auto;
+  }
+  .medium {
+    min-height: auto;
+  }
+  .medium + .fillerbox {
+    min-height: auto;
+  }
+  .light {
+    min-height: auto;
+  }
+  .light + .fillerbox {
+    min-height: auto;
   }
   .span3:last-of-type {
     margin-right:0 ;
@@ -2004,7 +2068,7 @@ article {
   }
   .subcontent section p {
     font-size: 1em;
-    color: #797979;
+    color: #383838;
   }
   section.span2 p {
     font-size: 1em;
@@ -2071,6 +2135,24 @@ article {
       margin-bottom: 6px;
       font-size: 16px;
     }
+  }
+  .dark {
+    min-height: auto;
+  }
+  .dark + .fillerbox {
+    min-height: auto;
+  }
+  .medium {
+    min-height: auto;
+  }
+  .medium + .fillerbox {
+    min-height: auto;
+  }
+  .light {
+    min-height: auto;
+  }
+  .light + .fillerbox {
+    min-height: auto;
   }
   .span3:last-of-type {
     margin-right:0 ;
@@ -2295,7 +2377,7 @@ article {
   }
   .subcontent section p {
     font-size: 1em;
-    color: #797979;
+    color: #383838;
   }
   section.span2 p {
     font-size: 1em;
@@ -2363,6 +2445,24 @@ article {
       margin-bottom: 6px;
       font-size: 19px;
     }
+  }
+  .dark {
+    min-height: auto;
+  }
+  .dark + .fillerbox {
+    min-height: auto;
+  }
+  .medium {
+    min-height: auto;
+  }
+  .medium + .fillerbox {
+    min-height: auto;
+  }
+  .light {
+    min-height: auto;
+  }
+  .light + .fillerbox {
+    min-height: auto;
   }
   .span3:last-of-type {
     margin-right:0 ;
@@ -2591,7 +2691,7 @@ article {
   }
   .subcontent section p {
     font-size: 1em;
-    color: #797979;
+    color: #383838;
   }
   section.span2 p {
     font-size: 1em;
@@ -2622,8 +2722,6 @@ article {
     margin-right: 2.35em;
     h2, h3 {
       font-weight: normal;
-      font-size: 26px;
-      line-height: 29px;
       cursor: auto;
       background: none;
       padding-left: 0;
@@ -2642,10 +2740,13 @@ article {
     }
     h3 {
       margin-bottom: 0.5em;
-    }
-    h4 {
       font-size: 26px;
       line-height: 29px;
+    }
+    h4 {
+      font-size: 21px;
+      line-height: 25px;
+      font-weight: normal !important;
 
     }
     .spanwrapper {
@@ -2658,6 +2759,24 @@ article {
       margin-bottom: .5;
       font-size: 16px;
     }
+  }
+  .dark {
+    min-height: 330px;
+  }
+  .dark + .fillerbox {
+    min-height: 128px;
+  }
+  .medium {
+    min-height: 310px;
+  }
+  .medium + .fillerbox {
+    min-height: 158px;
+  }
+  .light {
+    min-height: 250px;
+  }
+  .light + .fillerbox {
+    min-height: 210px;
   }
   .span3:last-of-type {
     margin-right:0 ;
@@ -3087,4 +3206,20 @@ $navcorner: 0px;
     h3 {
         page-break-after: avoid;
     }
+}
+
+
+
+
+.imprint, .privacypolicy, .legaldisclaimer {
+  header {
+    background: transparent;
+    h4 {
+      display: block;
+      background: white;
+      color: #e20074;
+      font-size: 32px;
+    }
+  }
+
 }
